<resources>
    <string name="app_name">ParkApp</string>
    <string name="title_map">Mapa</string>
    <string name="title_reservas">Reservas</string>
    <string name="title_perfil">Mi perfil</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Tablero</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="perfil">Mi Perfil</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Vehiculo">Vehiculo</string>

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="dont_have_account">No tienes cuenta? Regístrate</string>
    <string name="already_have_account">Ya tienes una cuenta? Log in</string>
    <string name="SpVehiculos">Spinner Vehiculos</string>
    <string name="PhoneNumber">Numero de teléfono</string>
    <string name="save">Guardar</string>

    <!-- Array del spinner de perfil -->
    <string-array name="Vehiculos">
        <item>Ninguno</item>
        <item>Auto</item>
        <item>Moto</item>
        <item>Bicicleta</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="reservar">Reservar</string>
    <string name="parking_colon">Parking:</string>
    <string name="checkin_colon">Checkin:</string>
    <string name="checkout_colon">Checkout:</string>
    <string name="dolar_sign_colon">$:</string>

<!--    SCHEDULES LIST CONSTANTS-->
    <string name="reservas_corrientes_colon">RESERVAS CORRIENTES:</string>
    <string name="reservas_pasadas_colon">RESERVAS PASADAS:</string>

<!--    API ERRORS  -->
    <string name="api_error_campos_vacios">Debe completar los campos para poder iniciar sesión.</string>
    <string name="api_error_error_autenticacion">Error de autenticación.</string>
    <string name="api_error_fallo_signup">Falló el signup.</string>


    <string name="parking_direccion">Dirección: </string>
    <string name="parking_horario">Horario:</string>
    <string name="lista_de_parkings">Lista de Parkings</string>


</resources>
