<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="@id/button_first"
        app:layout_constraintStart_toStartOf="@id/button_first"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/button_first"
        app:layout_constraintStart_toStartOf="@id/button_first"
        app:layout_constraintTop_toBottomOf="@id/login_user_email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@id/button_first"
        app:layout_constraintStart_toStartOf="@id/button_first"
        app:layout_constraintTop_toBottomOf="@id/login_user_password" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="@id/button_first"
        app:layout_constraintStart_toStartOf="@id/button_first"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />
</androidx.constraintlayout.widget.ConstraintLayout>