<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.probit.parkapp.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps">

        <action
            android:id="@+id/action_navigation_map_to_reserva_fragment"
            app:destination="@id/reserva_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
        android:id="@+id/action_navigation_map_to_parkinglist_fragment"
        app:destination="@id/navigation_parking_list"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/reserva_fragment"
        android:name="com.probit.parkapp.ui.map.ReservaFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps">
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.probit.parkapp.ui.schedules.SchedulesFragment"
        android:label="@string/title_reservas"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.probit.parkapp.ui.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/navigation_parking_list"
        android:name="com.probit.parkapp.ui.parkings.ParkingListFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_parking_list">

    </fragment>

</navigation>



