<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/item_parking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/parking_colon"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_parking_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/item_parking"
        app:layout_constraintStart_toEndOf="@id/item_parking"
        tools:text="Estacionamiento Cagancha" />

    <TextView
        android:id="@+id/item_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_direccion"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/item_parking"
        app:layout_constraintTop_toBottomOf="@id/item_parking" />

    <TextView
        android:id="@+id/item_direccion_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/item_direccion"
        app:layout_constraintStart_toEndOf="@id/item_parking"
        tools:text="San Jose" />

    <TextView
        android:id="@+id/item_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_horario"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/item_parking"
        app:layout_constraintTop_toBottomOf="@id/item_direccion" />

    <TextView
        android:id="@+id/item_horario_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/item_horario"
        app:layout_constraintStart_toEndOf="@id/item_horario"
        tools:text="lun a sab 10 a 23hs" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_horario" />

</androidx.constraintlayout.widget.ConstraintLayout>